# wasm-walrus-tools

./: Cargo.toml  README.md  example.wasm  package.json  tsconfig.json  walrus.wit
src/: lib.rs
ts/: index.ts  intrinsics.js  walrus.d.ts  walrus.js  wasm.ts
