[package]
name = "walrus-example"
version = "0.1.0"
edition = "2021"
publish = false



[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# walrus = "0.19.0"
witgen = "0.12.0"
wasmparser = "0.84.0"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
